# Faster-Whisper-Service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  GPU_SUPPORT.md  HARDWARE.md  README.md  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/: config.py  main.py  transcription_service.py
